<resources>
    <string name="app_name">Orderapli</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_yet_registered_signup_now">Not yet registered? SignUp Now</string>
    <string name="username">Username</string>
    <string name="login1">Login</string>
    <string name="logout">Logout</string>
    <string name="delivered">Delivered</string>
    <string name="_12_oct_2023">12 Oct 2023</string>
    <string name="_10_99">$10.99</string>
    <string name="burger_combo">Burger Combo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="recent_orders">Recent Orders</string>
    <string name="update_password">Update Password</string>
    <string name="edit_profile1">Edit Profile</string>
    <string name="_7019689043">+7019689043</string>
    <string name="_1_234_567_890">+1 234 567 890</string>
    <string name="aaekarthikgmail.com">aaekarthik@gmail.com</string>
    <string name="Karthik_ae">Karthik</string>
    <string name="logout2">Logout</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="logout_desc">Logout</string>
    <string name="pic">pic</string>
    <string name="product_list">productList</string>
    <string name="macbook_air_m1_space_gray_256_gb_8_gb_ram">MacBook Air M1 (Space Gray, 256 GB) (8 GB RAM)</string>
    <string name="_28_off">28% off</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="buy_now">BUY NOW</string>

    <string name="available_offers">Available offers</string>
    <string name="cash_on_delivery">• Cash on Delivery</string>
    <string name="easy_payment">• Easy Payment</string>
    <string name="stylish_amp_portable_thin_and_light_laptop"><![CDATA[• Stylish & Portable Thin and Light Laptop]]></string>
    <string name="highlights">Highlights</string>
    <string name="_92_9900">₹92,9900</string>
    <string name="_52_765">₹52,765</string>
    <string name="product_image">Product Image</string>
    <string name="imagback">ImageShack</string>
    <string name="fingerprint_icon">Fingerprint Icon</string>
    <string name="PRODUCT_LIST">PRODUCT LIST\n</string>
    <string name="welcome_to_orderapp">Welcome to OrderApp</string>
    <string name="OrdersUp">OrdersUp</string>
    <string name="app_pic">app_pic</string>
    <string name="_91_7019689043">+91 7019689043</string>
    <string name="karthik_a_e">Karthik A E</string>
    <string name="profile_options">Profile Options</string>
    <string name="edit_profile11">Edit Profile</string>
    <string name="appsettings">AppSettings</string>
    <string name="edi_txt">Edit Profile</string>
    <string name="help">Help</string>
    <string name="change_password2">Change Password</string>
    <string name="logout22">Logout</string>
    <string name="Karthikae">A E KARTHIK</string>
    <string name="exchange_offer_get_up_to_10_000_off_on_exchange">Exchange Offer: Get up to ₹10,000 off on exchange</string>
    <string name="dail">dail</string>
    <string name="message">message</string>
    <string name="share">share</string>
    <string name="email">email</string>
    <string name="click">click</string>
    <string name="my_orders">My Orders</string>
    <string name="take_orders">Take Orders</string>
    <string name="phone1highlights">phnhighlights\n</string>
    <string name="phone1cart">phncart\n</string>
    <string name="phone1buy">phonebuy\n</string>
    <string name="phone1off">offphn\n</string>
    <string name="phone1price">phnprice\n</string>
    <string name="phone1info">phoneinfo\n</string>
    <string name="Back">baccc\n</string>
    <string name="firstpic">firstpic</string>
    <string name="enter_the_number">enter the number</string>


</resources>