<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newpic"
    android:padding="16dp"
    tools:context=".UserProf">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:cropToPadding="false"
        android:src="@drawable/mee"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp" />


    <TextView
        android:id="@+id/editProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/edit_profile1"
        android:textColor="@color/black"
        android:textSize="14sp" />


    <androidx.cardview.widget.CardView
        android:id="@+id/userDetailsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editProfile"
        android:layout_marginTop="65dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_brown"
            android:padding="16dp">


            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Karthikae"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvName"
                android:layout_marginTop="8dp"
                android:text="@string/aaekarthikgmail.com"
                android:textColor="@color/black" />

            <!-- Phone -->
            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvEmail"
                android:layout_marginTop="8dp"
                android:text="@string/_7019689043"
                android:textColor="@color/black" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/passwordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userDetailsCard"
        android:layout_marginTop="24dp"
        android:text="@string/change_password"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/passwordForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTitle"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:padding="12dp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:boxStrokeColor="@color/black"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/current_password"
                android:inputType="textPassword"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:boxStrokeColor="@color/black"
            android:textColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/new_password"
                android:textColorHint="@color/black"
                android:inputType="textPassword"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:boxStrokeColor="@color/black"
            android:textColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Update Password Button -->
        <Button
            android:id="@+id/btnUpdatePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/brown"
            android:text="@string/update_password"
            android:textColor="@color/black" />
    </LinearLayout>


    <ImageView
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="-4dp"
        android:contentDescription="@string/logout_desc"
        android:padding="17dp"
        android:scaleX="2.0"
        android:scaleY="2.0"
        android:src="@drawable/lolll"
        app:tint="@color/black" />

</RelativeLayout>