<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/newpic"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20sp"
        android:backgroundTint="@color/gold_ecru">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/dailButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/item_background1"
                android:backgroundTint="@color/dark_brown"

                android:text="@string/dail" />

            <Button
                android:id="@+id/btncall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/item_background1"
                android:backgroundTint="@color/dark_brown"
                android:text="@string/message" />

            <Button
                android:id="@+id/btnemail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/item_background1"
                android:backgroundTint="@color/dark_brown"
                android:text="@string/email" />

            <Button
                android:id="@+id/btnshare"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="30dp"


                android:background="@drawable/item_background1"
                android:backgroundTint="@color/dark_brown"
                android:text="@string/share" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>